[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Turrets/Assets/turret.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Turrets/Turret.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 31.0004
height = 4.07539

[node name="Turret" type="Area2D"]
position = Vector2( 84.2273, 79.4597 )
rotation = 1.5708
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="TurretSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.0104828, 0.153351 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.529732, 0.529724 )
shape = SubResource( 2 )

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="timeout" from="ShootTimer" to="." method="_on_Timer_timeout"]
